force-app/main/default/objects/Case/fields/CVRD_DS_Address__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>