force-app/main/default/objects/Case/fields/CVRD_DS_Public_Comment__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Public_Comment__c</fullName>
    <inlineHelpText>With additional information stating “Additional Documents or Comments can be submitted via Email</inlineHelpText>
    <label>Comments (maximum 3950 characters)</label>
    <length>3950</length>
    <type>LongTextArea</type>
</CustomField>