force-app/main/default/objects/Case/recordTypes/CVRD_DS_Development_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Development_Enquiry</fullName>
    <active>true</active>
    <businessProcess>Complaint</businessProcess>
    <label>Development Enquiry</label>
</RecordType>