force-app/main/default/objects/Case/recordTypes/CVRD_DS_Public_Notice.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Public_Notice</fullName>
    <active>true</active>
    <businessProcess>Public Notice</businessProcess>
    <label>Response To Public Notice</label>
</RecordType>